# chromadb-tui

./: .gitignore  README.md  pyproject.toml
src/chroma_gui/: __init__.py  main.py  tui_rich.py
src/chroma_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/chroma_tui/: __init__.py  tui_rich.py
src/chroma_tui.egg-info/: PKG-INFO
