[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chroma-gui"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A TUI for ChromaDB"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "chromadb-client",
]

[project.scripts]
chroma-gui = "chroma_gui.main:run"
